[package]
name = "minimal-primes"
version = "0.1.0"
edition = "2021"

# for profiling
[profile.profile]
inherits = "release"
debug = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
clap = { version = "4.5.15", features = ["derive"] }
ctrlc = "3.4.7"
itertools = "0.13.0"
log = { version = "0.4.27", features = ["std"] }
num-bigint = "0.4.6"
num-integer = "0.1.46"
num-modular = "0.6.1"
num-prime = { version = "0.4.4", features = ["big-int"] }
num-traits = "0.2.19"

[dev-dependencies]
pretty_assertions = "1.4.1"
regex = "1.11.1"
